# aoc22

./: .pdm.toml  aoc22_1-13.qmd  aoc22_14-16.qmd  aoc22_17.qmd  aoc22_18.qmd  aoc22_19.qmd  aoc22_20.qmd  aoc22_puk.ipynb  aoc22_puk.qmd  day19.py  day20.py  day21.py  day22.py  day23.py  day24-2.py  day24.py  day25.py  pyproject.toml
day17_logfiles/: track.csv  track_01.csv  track_02.csv
input/: 21_input.txt
