[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Joachim Hereth", email = "7327644+jhereth@users.noreply.github.com"},
]
dependencies = [
    "jupyterlab>=3.5.0",
    "jupytext>=1.14.1",
    "setuptools>=65.6.3",
    "nbformat>=5.7.0",
    "jupyterlab-code-formatter>=1.5.3",
    "isort>=5.10.1",
    "black>=22.10.0",
    "tqdm>=4.64.1",
    "networkx>=2.8.8",
    "matplotlib>=3.6.2",
    "pyrsistent>=0.19.2",
    "numpy>=1.23.5",
    "pandas>=1.5.2",
    "astar>=0.94",
]
requires-python = ">=3.9"
license = {text = "MIT"}
